# efficient-haskell

./: README.md
fft/: README.md
fft/cpp/: Makefile  bitmap.h  fft.cpp  wavefile.h
fft/cs/: .gitignore  Bitmap.cs  Fft.cs  Makefile  Wavefile.cs
fft/hs/: Bitmap.hs  Fft.hs  HaskellFFT.cabal  Main.hs  Wavefile.hs  stack.yaml
fft/lua/: bitmap.lua  fft.lua  wavefile.lua
nub/: README.md
nub/C++/: Makefile  README.md  main.cpp
nub/Haskell/nub-bench/: README.md  criterion.html  nub-bench.cabal  stack.yaml
nub/Haskell/nub-bench/app/: Main.hs
nub/Haskell/nub-bench/src/: HashNub.hs  OrdNub.hs  StuNub.hs  UnboxArray.hs
nub/Java/: README.md
nub/Java/src/: Benchmark.java  Main.java
nub/Java/src/nub/: NubImpl.java
qsort/: README.md
qsort/Haskell/: Qsort_bonus_task.cabal
qsort/Haskell/src/: Main.hs  QSort.hs  SearchTree.hs  Sorters.hs
qsort/Java/: build.gradle  settings.gradle
qsort/Java/gradle/wrapper/: gradle-wrapper.properties
qsort/Java/src/jmh/java/com/example/: Qsort.java  QsortBenchmark.java
