name:                 HaskellFFT
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Kuznetsov Nikolay
--maintainer:         
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable HaskellFFT
  main-is:              Main.hs
  other-modules:        Bitmap, Wavefile, Fft
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, containers, binary, bytestring, array, unordered-containers
  hs-source-dirs:       .
  default-language:     Haskell2010
