name:                nub-bench
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OrdNub
                     , HashNub
                     , StuNub
  other-modules:       UnboxArray
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , hashable
                     , containers
                     , array
  default-language:    Haskell2010

executable bench
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nub-bench
                     , criterion
                     , containers
                     , unordered-containers
                     , hashable
                     , Unique
                     , array
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Bench1
